# wain

./: .editorconfig  .envrc  .gitignore  .golangci.bck.yml  .golangci.yml  ACCESSIBILITY.md  ANDROID_PORT_FEASIBILITY.md  API.md  AUDIT-2026-03-07-v3.md  AUDIT-2026-03-07.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  GAPS.md  GETTING_STARTED.md  GITHUB_ISSUES.md  HARDWARE.md  Makefile  PHASE_9_3_ANALYSIS.md  PHASE_9_3_SUMMARY.txt  PLAN.md  PRODUCTION_READINESS.md  READINESS_SUMMARY.md  README.md  RECOMMENDED_LIBRARIES.md  RELEASE.md  REMEDIATION_ROADMAP.md  ROADMAP.md  STABILITY.md  TECHNICAL_DEBT.md  TUTORIAL.md  VET.md  WIDGETS.md  accessibility.go  accessibility_internal_test.go  accessibility_test.go  animate.go  app.go  app_test.go  audit-baseline.json  (+33 more)
cmd/bench/: main.go
render-sys/: Cargo.toml  GPU_TESTING.md  build.rs
render-sys/shaders/: README.md  box_shadow.wgsl  linear_gradient.wgsl  radial_gradient.wgsl  rounded_rect.wgsl  sdf_text.wgsl  textured_quad.wgsl
render-sys/src/: allocator.rs  amd.rs  batch.rs  detect.rs  drm.rs  gpu_test.rs  i915.rs  lib.rs  pipeline.rs  pm4.rs  shader.rs  shaders.rs  slab.rs  submit.rs  surface.rs  xe.rs
render-sys/src/cmd/: mi.rs  mod.rs  pipeline.rs  primitive.rs  state.rs
render-sys/src/eu/: README.md  encoding.rs  instruction.rs  lower.rs  mod.rs  regalloc.rs  types.rs
render-sys/src/rdna/: encoding.rs  instruction.rs  lower.rs  mod.rs  regalloc.rs  types.rs
render-sys/tests/: shader_compile.rs
scripts/: README.md  analyze_godoc.go  build-rust.sh  compute-coverage.sh  verify-build.sh
tmp/: baseline-exec.json
(+316 files in other folders)
