[package]
name = "render-sys"
version = "0.1.0"
edition = "2021"
description = "Static Rust rendering library for the wain Go UI toolkit"
license = "MIT"

[lib]
name = "render_sys"
crate-type = ["staticlib"]

[dependencies]
nix = { version = "0.27", features = ["ioctl"] }
naga = { version = "0.14", features = ["wgsl-in", "glsl-in", "validate"] }
